# cloudshell-sandbox-reporter

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  changelog.MD  changelog_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: lint-test.yml  release.yml
src/cloudshell/helpers/sandbox_reporter/: html_wrap.py  reporter.py  sandbox_console.py
tests/: common.py  conftest.py  constants.py  env_settings.py  test_reporter_integration.py
tests/reporter-tester/: deployment.xml  shell-definition.yaml
tests/reporter-tester/src/: data_model.py  driver.py  drivermetadata.xml  requirements.txt
tests/reporter-tester/tests/: test_reporter-tester.py
